refactor: Optimizar uso de Stream API en todos los repositorios MongoDB y JPA