@@ -14,8 +14,10 @@ import java.util.stream.Collectors;
  * Implementación MongoDB de UserRepository.
  * Esta implementación está activa cuando el perfil "mongo" está habilitado.
  *
- * Proporciona todas las operaciones CRUD y consultas especializadas usando MongoDB.
- * La conversión entre documentos y dominios se realiza mediante UserDocumentMapper.
+ * Proporciona todas las operaciones CRUD y consultas especializadas usando
+ * MongoDB.
+ * La conversión entre documentos y dominios se realiza mediante
+ * UserDocumentMapper.
  *
  * @see UserRepository - Interfaz genérica
  * @see Profile - Esta implementación solo se activa con @Profile("mongo")
@@ -49,10 +51,10 @@ public class UserRepositoryMongoImpl implements UserRepository {
         return repository.saveAll(
                 users.stream()
                         .map(mapper::toDocument)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -66,7 +68,7 @@ public class UserRepositoryMongoImpl implements UserRepository {
         return repository.findAll()
                 .stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -83,18 +85,16 @@ public class UserRepositoryMongoImpl implements UserRepository {
 
     @Override
     public List<User> findByRole(String role) {
-        return repository.findByRole(role)
-                .stream()
+        return repository.findByRole(role).stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<User> findAllLibrarians() {
-        return repository.findAllLibrarians()
-                .stream()
+        return repository.findAllLibrarians().stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<User> findLibrarianByEmail(String email) {
@@ -103,18 +103,16 @@ public class UserRepositoryMongoImpl implements UserRepository {
     }
 
     public List<User> findActiveUsersByRole(String role) {
-        return repository.findActiveUsersByRole(role)
-                .stream()
+        return repository.findActiveUsersByRole(role).stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<User> findAllRegularUsers() {
-        return repository.findByRole("USER")
-                .stream()
+        return repository.findByRole("USER").stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
